# inteldove-backend

./: .env  inteldove-backend.patch  main.py  pyproject.toml  render.yaml  requirements.txt  setup.py
app/: ai_services.py  auth.py  database.py  main.py  models.py  ocr_service.py  schemas.py
